fixing minor layout bug

--- a/web/css/handheld.css
+++ b/web/css/handheld.css
@@ -52,7 +52,7 @@ body {
 }
 
 #body .section {
-	width: auto !important;
+	width: auto;
 }
 
 #body .about-me .picture {
